examples/compiler_errors/adversarial/common_dev_mistakes/MissingPublicAccess.flx
import HiddenApi

module MissingPublicAccess {
    fn leak() -> Int {
        HiddenApi.secret()
    }
}
